# mu-rust-template

./: Cargo.toml  Dockerfile  README.md
src/: main.rs
src/templates/: query1.sparql  query2.sparql
