[package]
name = "mu-rust-template"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
tracing = "0.1.37"
mu_rust_sparql_client = { version = "0.1.0" }
mu_rust_common = { version = "0.1.0" }
mu_rust_service_common = { version = "0.1.0" }
tokio = { version = "1.27.0", features = ["full"] }
axum = { version = "0.6.16" }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = { version = "1.0.96" }
